# orvis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  set_vcpkg_path.ps1
exe/01_basicRendering/: main.cpp
ext/glshader/: CMakeLists.txt  CMakeSettings.json
ext/glshader/examples/from_file/: .gitignore  dinc.glsl  inc.glsl  main.cpp  test.vert  wgl_context.cpp
ext/glshader/include/glsp/: preprocess.hpp
ext/glshader/src/compiler/: compiler.cpp
ext/glshader/src/preprocessor/: macro.cpp  preprocessor.cpp
ext/imgui/: imgui_impl_opengl3.cpp
lib/orvis/: Binding.hpp  Bounds.cpp  Bounds.hpp  Bounds.inl  Buffer.hpp  Buffer.inl  Camera.cpp  Camera.hpp  Creatable.hpp  Createable.hpp  Cubemap.cpp  Cubemap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  OpenGL_RAII.hpp  Scene.cpp  Scene.hpp  ScreenFiller.cpp  ScreenFiller.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture.inl  Timer.cpp  Timer.hpp  Util.cpp  Util.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexArray.inl  Window.cpp  Window.hpp
shd/compute/: viewFrustumCulling.comp
shd/fragment/: basicRendering.frag  shadowMap.frag  skyBox.frag
shd/include/: camera.glsl  light.glsl  material.glsl  pbrShading.glsl  shadowMapping.glsl
shd/vertex/: lightTransform.vert  multiDraw.vert  screenFilling.vert
